--- a/intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md
+++ b/intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md
@@ -7,30 +7,27 @@
 -   告警自动关联分析功能可对相关的异常事件进行实时自动化关联，挖掘出潜藏的入侵威胁。
 -   告警自动化关联以告警发生的时间顺序聚合成关联的告警，帮助您更便捷地分析和处理告警事件，提升您系统的应急响应机制。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155953388533909_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050980_zh-CN.png)
 
 ## 操作步骤 {#section_g2v_wdx_bgb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏选择**安全告警处理**打开**安全告警**列表。
+2.  在左侧导航栏选择**威胁检测** \> **安全告警处理**。
 3.  在**安全告警处理**列表中，单击需要查看的告警事件名称打开告警事件详情页面。
 4.  在告警事件详情页面查看告警事件的详细信息、关联的异常事件和对告警/异常事件进行处理。
     -   查看告警详细信息：您可查看受该告警事件影响的资产信息、告警开始/结束时间、关联异常事件的详情。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/155953388548517_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050981_zh-CN.png)
 
-    -   查看受影响资产：单击**受影响的资产**名称可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
+    -   查看受影响资产：单击**受影响资产**名称可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155953388533910_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050983_zh-CN.png)
 
     -   查看和处理**关联异常**：您可在**关联异常**区域查看该告警事件关联的所有异常情况的详细信息、建议处理方案和处理方式。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155953388533911_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050984_zh-CN.png)
 
-        -   **确认线下处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
-
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155953388535082_zh-CN.png)
-
+        -   **标记为已处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
         -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
         -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
 
