--- a/intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md
+++ b/intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md
@@ -7,7 +7,7 @@
 -   告警自动关联分析功能可对相关的异常事件进行实时自动化关联，挖掘出潜藏的入侵威胁。
 -   告警自动化关联以告警发生的时间顺序聚合成关联的告警，帮助您更便捷地分析和处理告警事件，提升您系统的应急响应机制。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050980_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251008_zh-CN.png)
 
 ## 操作步骤 {#section_g2v_wdx_bgb .section}
 
@@ -17,20 +17,26 @@
 4.  在告警事件详情页面查看告警事件的详细信息、关联的异常事件和对告警/异常事件进行处理。
     -   查看告警详细信息：您可查看受该告警事件影响的资产信息、告警开始/结束时间、关联异常事件的详情。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050981_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251009_zh-CN.png)
 
     -   查看受影响资产：单击**受影响资产**名称可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050983_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251007_zh-CN.png)
 
     -   查看和处理**关联异常**：您可在**关联异常**区域查看该告警事件关联的所有异常情况的详细信息、建议处理方案和处理方式。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156255021050984_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251006_zh-CN.png)
 
         -   **标记为已处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
         -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
         -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
 
             **说明：** 告警误报是指系统对正常程序进行告警。常见的告警误报有对外异常TCP发包可疑进程，提示您服务器上有进程在对其他设备发起了疑似扫描行为。
+
+        -   **备注**：单击**备注**，添加您需要备注的内容，然后单击**添加备注**。您可以根据需要对该事件添加多条备注。
+
+            单击备注信息后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251005_zh-CN.png)，您也可根据需要删除已添加的备注。
+
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156258066251004_zh-CN.png)
 
 
