--- a/intl.zh-CN/产品定价/购买云安全中心.md
+++ b/intl.zh-CN/产品定价/购买云安全中心.md
@@ -1,23 +1,34 @@
 # 购买云安全中心 {#task_lxj_3bc_zdb .task}
 
-云安全中心为您的云上资产提供全面的安全监测与诊断服务。您可以使用包年包月的方式开启云安全中心企服务。
+云安全中心为您的云上资产提供全面的安全监测与诊断服务。您可以使用包年包月的方式开启云安全中心服务。
 
-云安全中心支持基础版、高级版和企业版，各版本功能详情参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
+云安全中心支持基础版、高级版和企业版，各版本功能详情参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
-1.  登录您的阿里云账号，并前往[云安全中心购买页](https://common-buy-intl.alibabacloud.com/?commodityCode=sas_intl&accounttraceid=1f5e0cf4-dfe1-4ab4-a4c9-57af70efdb4d#/buy)。 
-2.   选择您要购买的配置。参数说明如下： 
-    -   **资产规模**：指定要防护的服务器总数，包括ECS服务器和非阿里云服务器。默认显示当前账号下拥有的ECS实例总数，资产规模不应小于该数量。
+1.  登录您的阿里云账号，并前往[云安全中心购买页](https://common-buy-intl.alibabacloud.com/?commodityCode=sas_intl&accounttraceid=1f5e0cf4-dfe1-4ab4-a4c9-57af70efdb4d#/buy)。
+2.  选择您要购买的配置。参数说明如下： 
+    -   **包年包月** 
+        -   **最大授权数**：指定要防护的服务器总数，包括ECS服务器和非阿里云服务器。默认显示当前账号下拥有的ECS实例总数，最大授权数不应小于该数量。
 
-        **说明：** 如果您预计在购买时长内，要防护的服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的服务器总数。
+            **说明：** 如果您预计在购买时长内，要防护的服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的服务器总数。
 
-    -   **版本选择**：选择您需要的版本，不同版本功能介绍参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
-    -   **防篡改**：增值服务，如果勾选则包含在服务范围内。可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改。
-    -   **全量日志**：增值服务，如果勾选则包含在服务范围中。提供主机日志、网络日志等10类安全日志的全量日志检索服务，用于事件回溯和安全分析。
-3.   选择**购买时长**，并勾选是否需要**自动续费**。 
+        -   **版本选择**：选择您需要的版本，不同版本功能介绍参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
+        -   **日志分析**：增值服务，如果选择**是**包含在服务范围中，并设置**日志存储容量**。提供主机日志、网络日志等10类安全日志的全量日志检索服务，用于事件回溯和安全分析。
+        -   **网页防篡改**：增值服务，如果选择**是**包含在服务范围中，并设置**防篡改授权数**。可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改。
+        -   **购买时长**：选择购买时长，并勾选是否需要**自动续费**。
 
-    **说明：** 
+            **说明：** 
 
-    -   资产规模不足10台时，最小购买时长为6个月；资产规模大于10台时，最小购买时长为1个月。
-    -   勾选自动续费后，自动续费周期与购买时长对应，即按月购买的自动续费周期为一个月，按年购买的自动续费周期是一年。
-4.   单击**立即购买**，并完成支付。 
+            -   资产规模小于或等于10台时，最小购买时长为6个月；资产规模大于10台时，最小购买时长为1个月。
+            -   勾选自动续费后，自动续费周期与购买时长对应，即按月购买的自动续费周期为一个月，按年购买的自动续费周期是一年。
+    -   **微步威情** 
+
+        **说明：** 提供第三方威胁情报源，且已经购买云安全中心的国内站客户，才能购买威胁情报。
+
+        -   **资源类型**：威步威胁情报。默认资源类型，无需修改。
+        -   **ECS数量**：指定要防护的ECS服务器总数，默认显示当前账号下拥有的ECS实例总数，ECS数量不应小于该数量。
+
+            **说明：** 如果您预计在购买时长内，要防护的ECS服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的ECS服务器总数。
+
+        -   **有效期**：选择有效时长，可选1个月、3个月、6个月、1年、2年。
+3.  单击**立即购买**，并完成支付。
 
