--- a/cn.zh-CN/产品定价/计费模式.md
+++ b/cn.zh-CN/产品定价/计费模式.md
@@ -1,6 +1,6 @@
 # 计费模式 {#concept_z2v_2bc_zdb .concept}
 
-云盾态势感知企业版使用包年包月的计费模式。
+云盾云安全中心**高级版**和**企业版**使用包年包月的计费模式。
 
 ## 付费方式 {#section_gbn_fbc_zdb .section}
 
@@ -12,10 +12,22 @@
 
 ## 计费方式 {#section_ibn_fbc_zdb .section}
 
-资产规模 \* 单资产版本单价 \* 购买时长
+资产规模 \* 单资产版本单价 \* 购买时长。
+
+产品定价参见[价格信息](https://www.aliyun.com/price/product?spm=5176.cnsas.0.0.8fe23068yL9MkM&/sas#/sas/detail)。
 
 **说明：** 
 
--   资产规模指加入保护的服务器总数，包括ECS服务器和非阿里云服务器；默认值是当前账号拥有的ECS实例总数，您在[购买态势感知](intl.zh-CN/产品定价/购买态势感知.md#)时指定的资产规模不能小于已拥有的ECS实例总数。
--   态势感知支持防护的资产类型除了ECS服务器和非阿里云服务器，还包括负载均衡实例和NAT网关，但后两者不计费。
+-   资产规模指加入保护的服务器总数，包括ECS服务器和非阿里云服务器；默认值是当前账号拥有的ECS实例总数，您在[购买云安全中心](intl.zh-CN/产品定价/购买云安全中心.md#)时指定的资产规模不能小于已拥有的ECS实例总数。
+-   云安全中心支持防护的资产类型除了ECS服务器和非阿里云服务器，还包括负载均衡实例和NAT网关，但后两者不计费。
+
+## 相关文档 {#section_4tp_rz1_0m7 .section}
+
+-   [购买云安全中心](../../../../intl.zh-CN/产品定价/购买云安全中心.md#)
+-   [服务续费与升级](../../../../intl.zh-CN/产品定价/服务续费与升级.md#)
+-   [联通沃云购买企业版失败](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
+-   [如何降低产品配置？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
+-   [软件漏洞功能收费说明](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
+-   [云安全中心提示即将到期续费如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示即将到期续费如何处理？.md#)
+-   [云安全中心服务器超出授权数量该如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心服务器超出授权数量该如何处理？.md#)
 
