--- a/cn.zh-CN/用户指南/漏洞管理/应用漏洞.md
+++ b/cn.zh-CN/用户指南/漏洞管理/应用漏洞.md
@@ -9,20 +9,20 @@
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  定位到**漏洞修复** \> **应用漏洞**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948581_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530248581_zh-CN.png)
 
 3.  您可以在应用漏洞页面查看云安全中心检测到的所有应用漏洞，查看漏洞修复建议、严重程度和状态、对特定漏洞进行定位、将漏洞加入白名单或验证漏洞等操作。
     -   **查看漏洞详情** 
 
         单击漏洞列表中的漏洞名称打开漏洞详情页面。您可在漏洞详情页面查看该漏洞的漏洞证明、安全建议等信息，并可将漏洞加入白名单等操作。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948583_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530348583_zh-CN.png)
 
         在漏洞详情页面的漏洞列表中，单击漏洞**影响的资产名称**，可定位到**资产列表** \> **漏洞信息**页面，为您展示该资产中检测到的应用漏洞信息。
 
     -   **查看漏洞安全建议并进行相应的修复操作**
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948586_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530348586_zh-CN.png)
 
     -   **查看漏洞的修复紧急度建议** 
 
@@ -32,7 +32,7 @@
 
         您可在应用漏洞页面通过筛选漏洞危险等级（高、中、低）、漏洞处理状态（已处理、未处理）或输入服务器IP/名称定位到相关的漏洞。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948587_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530348587_zh-CN.png)
 
     -   **查看漏洞详细状态**
 
@@ -47,13 +47,13 @@
 
         您可在应用漏洞页面勾选漏洞列表左侧的复选框后，单击**加白名单**，将该漏洞加入白名单中。加入白名单后，云安全中心将不再对白名单中的应用漏洞进行告警。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948584_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530348584_zh-CN.png)
 
         加入白名单的漏洞将从漏洞列表中移除，并记录在[漏洞管理设置](intl.zh-CN/用户指南/漏洞管理/漏洞管理设置与加白名单.md#)页面的**漏洞白名单配置**列表中。
 
         如需恢复云安全中心对白名单中的漏洞进行检测和告警提示，可在漏洞管理设置页面漏洞白名单列表中**移除**该漏洞。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948585_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156384530448585_zh-CN.png)
 
     -   **导出漏洞** 
 
@@ -112,7 +112,7 @@
 |Jenkins Manage 匿名访问CVE-2018-1999001 CVE-2018-1999002|
 |Jenkins 未授权访问|
 |Jenkins Script Security Plugin RCE|
-|Kurbernets 未授权访问漏洞|
+|Kurbernetes 未授权访问漏洞|
 |MetInfo getPassword 接口存在SQL注入漏洞|
 |MetInfo login 接口存在SQL注入漏洞|
 |PHPCMS 9.6 任意文件上传漏洞|
