--- a/cn.zh-CN/用户指南/安全告警处理/文件隔离箱.md
+++ b/cn.zh-CN/用户指南/安全告警处理/文件隔离箱.md
@@ -4,17 +4,19 @@
 
 ## 操作步骤 {#section_adm_cnt_sfb .section}
 
+您可以参考以下步骤管理告警的文件隔离箱。
+
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏选择**威胁检测** \> **安全告警处理**。
 3.  在**安全告警处理**页面单击右上角**文件隔离箱**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156275178030926_zh-CN.png)
+    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156448159730926_zh-CN.png)
 
     您可在**文件隔离箱**进行以下操作：
 
     -   在文件隔离箱列表中可以查看被隔离的文件主机地址、文件路径、状态和操作时间等信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156275178030927_zh-CN.png)
+        ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156448159730927_zh-CN.png)
 
     -   单击文件隔离箱页面右侧**操作**栏的**恢复**，可以将指定的被隔离文件从文件隔离箱中恢复。恢复的文件将重新回到安全告警列表中。
 
