--- a/cn.zh-CN/用户指南/日志分析/日志类别及参数说明.md
+++ b/cn.zh-CN/用户指南/日志分析/日志类别及参数说明.md
@@ -10,20 +10,20 @@
     -   安全告警日志
 -   **网络日志** 
 
-    -   DNS日志
+    -   DNS解析日志
     -   本地DNS日志
     -   网络会话日志
-    -   Web日志
+    -   WEB访问日志
     **说明：** 仅企业版用户支持查看网络日志，高级版用户不支持。即高级版用户在控制台日志分析页面仅能查看安全日志和主机日志。
 
 -   **主机日志** 
     -   进程启动日志
     -   网络连接日志
-    -   系统登录日志
+    -   登录流水日志
     -   暴力破解日志
     -   进程快照
-    -   账户快照
-    -   端口侦听快照
+    -   账号快照
+    -   端口快照
 
 ## 安全日志 {#section_onr_ndm_kfb .section}
 
@@ -41,10 +41,10 @@
 
 |日志来源|主题（`__topic__`）|描述|备注|
 |----|---------------|--|--|
-|DNS日志|sas-log-dns|通过网络的DNS日志|延迟2小时采集。|
+|DNS解析日志|sas-log-dns|通过网络的DNS日志|延迟2小时采集。|
 |本地DNS日志|local-dns|同一个阿里云域内的ECS之间DNS解析日志|延迟1小时采集。|
 |网络会话日志|sas-log-session|特定协议的网络日志|延迟1小时采集。|
-|Web日志|sas-log-web|HTTP日志|延迟1小时。|
+|WEB访问日志|sas-log-http|HTTP日志|延迟1小时。|
 
 ## 主机日志 {#section_vhk_n2m_kfb .section}
 
@@ -54,19 +54,9 @@
 |----|---------------|--|--|
 |进程启动日志|aegis-log-process|主机上进程启动信息|实时采集，进程启动立刻上报。|
 |网络连接日志|aegis-log-network|主机上连接的五元组信息|Windows系统实时采集，Linux系统10秒采集，增量上报。|
-|系统登录日志|aegis-log-login|SSH、RDP登录成功日志|实时采集。|
+|登录流水日志|aegis-log-login|SSH、RDP登录成功日志|实时采集。|
 |暴力破解日志|aegis-log-crack|登录失败的日志|实时采集。|
 |进程快照|aegis-snapshot-process|主机上进程快照信息|资产指纹自动收集功能开启后才有数据。每台主机一天非固定时间收集一次。|
-|账户快照|aegis-snapshot-host|主机上账户快照信息|资产指纹自动收集功能开启后才有数据。每台主机一天非固定时间收集一次。|
-|端口侦听快照|aegis-snapshot-port|主机上端口侦听快照信息|资产指纹自动收集功能开启后才有数据。每台主机一天非固定时间收集一次。|
-
-## **安全运营日志** {#section_fxh_h2n_xgb .section}
-
-安全运营日志提供以下几种日志，搜索不同数据时，使用`__topic__`进行区分即可：
-
-|日志来源|描述|备注|
-|----|--|--|
-|漏洞日志|漏洞日志|安全运营产生，实时采集。|
-|基线日志|基线日志|安全运营产生，实时采集。|
-|安全告警日志|安全告警日志|安全运营产生，实时采集。|
+|账号快照|aegis-snapshot-host|主机上账户快照信息|资产指纹自动收集功能开启后才有数据。每台主机一天非固定时间收集一次。|
+|端口快照|aegis-snapshot-port|主机上端口侦听快照信息|资产指纹自动收集功能开启后才有数据。每台主机一天非固定时间收集一次。|
 
