--- a/intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
+++ b/intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
@@ -6,27 +6,29 @@
 
 ## 操作步骤 {#section_cpw_qq3_kfb .section}
 
-1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏中选择**日志分析** 。
+您可以参考以下步骤查询日志信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155315388137891_zh-CN.png)
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
+2.  在左侧导航栏中选择**调查响应** \> **日志分析** 。
+
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/156453581737891_zh-CN.png)
 
 3.  在日志分析页面选择您需要查看的日志类型，并将状态设置为**启用**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155315388137893_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/156453581737893_zh-CN.png)
 
     您还可以在**日志分析**页面进行以下操作：
 
     -   单击**日志分析**打开日志服务查询和分析页面，页面将展示您选择的日志类型的查询和分析页面，并且系统会为您自动匹配查询语句。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155315388137898_zh-CN.png)
+        ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/156453581737898_zh-CN.png)
 
-    -   单击**搜索**按钮上方的时间设置下拉框选择日志时间范围，然后单击**搜索**按钮查看您所选时间范围内的日志信息。
+    -   单击**查询/分析**按钮上方的时间设置下拉框选择日志时间范围，然后单击**查询/分析**按钮查看您所选时间范围内的日志信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155315388137899_zh-CN.png)
+        ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/156453581737899_zh-CN.png)
+
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/156453581753622_zh-CN.png)
 
         **说明：** 云安全中心日志可保存180天，每条日志会在其日志时间的第180天被删除。
-
-        **说明：** 云安全中心支持对7天内的日志进行查询和分析。如需搜索或分析超过7天的日志数据，请提交工单了解详情。
 
 
